--- a/core/posts/templates/posts/index.html
+++ b/core/posts/templates/posts/index.html
@@ -3,7 +3,7 @@
     {% for tag in tag_list %}
         {% if forloop.counter <= half_tag_count %}
             <li>
-              <a href="#">{{ tag.name }}</a>
+              <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
             </li>
         {% endif %}
     {% empty %}
@@ -15,7 +15,7 @@
     {% for tag in tag_list %}
         {% if forloop.counter > half_tag_count %}
             <li>
-              <a href="#">{{ tag.name }}</a>
+              <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
             </li>
         {% endif %}
     {% empty %}
@@ -36,7 +36,7 @@
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
                     <p class="card-text">{{ post.description }}</p>
-                    <a href="post/{{ post.id }}" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="posts/{{ post.id }}/" class="btn btn-primary">Read More &rarr;</a>
                 </div>
                 <div class="card-footer text-muted">
                     Posted on {{ post.created_at }} by
