--- a/core/posts/templates/posts/detail.html
+++ b/core/posts/templates/posts/detail.html
@@ -1,4 +1,27 @@
 {% extends 'layout.html' %}
+{% block tag_contents1 %}
+    {% for tag in tag_list %}
+        {% if forloop.counter <= half_tag_count %}
+            <li>
+              <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+            </li>
+        {% endif %}
+    {% empty %}
+        <h2>Sorry, no tags yet</h2>
+    {% endfor %}
+{% endblock %}
+
+{% block tag_contents2 %}
+    {% for tag in tag_list %}
+        {% if forloop.counter > half_tag_count %}
+            <li>
+              <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+            </li>
+        {% endif %}
+    {% empty %}
+        <h2>Sorry, no tags yet</h2>
+    {% endfor %}
+{% endblock %}
 
 {% block content %}
     <!-- Post Content Column -->
@@ -33,7 +56,7 @@
             <i class="fa fa-tags"></i>
             Tags:
             {% for tag in post.tags.all %}
-                <a href=""><span class="badge badge-info">{{ tag.name }}</span></a>
+                <a href="/tags/{{ tag.id }}/posts/"><span class="badge badge-info">{{ tag.name }}</span></a>
             {% endfor %}
         </p>
         <hr>
