--- a/core/posts/templates/posts/index.html
+++ b/core/posts/templates/posts/index.html
@@ -36,7 +36,7 @@
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
                     <p class="card-text">{{ post.description }}</p>
-                    <a href="posts/{{ post.id }}/" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="/posts/{{ post.id }}/" class="btn btn-primary">Read More &rarr;</a>
                 </div>
                 <div class="card-footer text-muted">
                     Posted on {{ post.created_at }} by
