--- a/core/posts/templates/posts/detail.html
+++ b/core/posts/templates/posts/detail.html
@@ -3,7 +3,7 @@
     {% for tag in tag_list %}
         {% if forloop.counter <= half_tag_count %}
             <li>
-              <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+              <a class="blue-text" href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
             </li>
         {% endif %}
     {% empty %}
@@ -15,7 +15,7 @@
     {% for tag in tag_list %}
         {% if forloop.counter > half_tag_count %}
             <li>
-              <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+              <a class="blue-text" href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
             </li>
         {% endif %}
     {% empty %}
@@ -56,23 +56,27 @@
             <i class="fa fa-tags"></i>
             Tags:
             {% for tag in post.tags.all %}
-                <a href="/tags/{{ tag.id }}/posts/"><span class="badge badge-info">{{ tag.name }}</span></a>
+                <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
             {% endfor %}
         </p>
         <hr>
 
-      <!-- Comments Form -->
-      <div class="card my-4">
-        <h5 class="card-header">Leave a Comment:</h5>
-        <div class="card-body">
-          <form>
-            <div class="form-group">
-              <textarea class="form-control" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+        <!-- Comments Form -->
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Leave a comment:</span>
+              <form class="container">
+                <div class = "row">
+                    <textarea class="materialize-textarea">
+                    </textarea>
+                    <a href="#" class="btn waves-effect waves-light" type="submit" name="action">
+                      Submit
+                    </a>
+
+                </div>
+              </form>
+          </div>
         </div>
-      </div>
     </div>
 
 {% endblock %}
