--- a/core/posts/templates/posts/layout.html
+++ b/core/posts/templates/posts/layout.html
@@ -83,18 +83,7 @@
             </div>
           </div>
 
-          <!-- Side Widget -->
-          <div class="card white">
-            <div class="card-content black-text">
-              <span class="card-title">Join Us</span>
-              <p>Make your own blog!</p>
-            </div>
-            <div class="card-action center-block">
-                <a href="#" class="btn waves-effect waves-light" type="submit" name="action">
-                      Join
-                </a>
-            </div>
-          </div>
+          {% block join %}{% endblock %}
 
         </div>
 
