--- a/static_files/css/style.css
+++ b/static_files/css/style.css
@@ -1,5 +1,6 @@
 body {
   padding-top: 54px;
+    background: #f5f5f5;
 }
 
 @media (min-width: 992px) {
@@ -10,3 +11,14 @@ body {
  html {
     font-family: GillSans, Calibri, Trebuchet, sans-serif;
   }
+.form-container
+{
+	padding: 40px;
+	padding-top: 10px;
+}
+.login-container
+{
+    margin-top: 80px;
+    width: 400px;
+    height: 700px;
+}
