login and register succesfully added

--- a/core/posts/templates/posts/detail.html
+++ b/core/posts/templates/posts/detail.html
@@ -52,13 +52,13 @@
         <!-- Post Content -->
         <p class="lead">{{ post.text }}</p>
         <hr>
-        <p>
+        <div class="chip">
             <i class="fa fa-tags"></i>
             Tags:
             {% for tag in post.tags.all %}
                 <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
             {% endfor %}
-        </p>
+        </div>
         <hr>
 
         <!-- Comments Form -->
