--- a/core/accounts/templates/accounts/account_layout.html
+++ b/core/accounts/templates/accounts/account_layout.html
@@ -33,10 +33,10 @@
                   <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/accounts/login/">Login</a>
+                  <a class="nav-link" href="/accounts/logout/">LogOut</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/accounts/register/">Register</a>
+                  <a class="nav-link" href="#">Contact</a>
                 </li>
               </ul>
             </div>
