--- a/core/posts/templates/posts/layout.html
+++ b/core/posts/templates/posts/layout.html
@@ -33,10 +33,10 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="/accounts/login/">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/accounts/register/">Register</a>
             </li>
           </ul>
         </div>
@@ -69,14 +69,19 @@
                 <div class="card-action">
                   <div class="row">
                     <div class="col-lg-6">
-                      <ul class="list-unstyled mb-0">
-                        {% block tag_contents1 %}{% endblock %}
-                      </ul>
+                        <div class="chip">
+
+                            {% block tag_contents1 %}{% endblock %}
+
+                        </div>
+
                     </div>
                     <div class="col-lg-6">
-                      <ul class="list-unstyled mb-0">
+                        <div class="chip">
+
                         {% block tag_contents2 %}{% endblock %}
-                      </ul>
+
+                        </div>
                     </div>
                   </div>
                 </div>
