--- a/core/accounts/templates/accounts/login.html
+++ b/core/accounts/templates/accounts/login.html
@@ -49,10 +49,10 @@
             </center>
             <div class="row">
               <div class="input-field col s6 m6 l6">
-                <p class="margin medium-small"><a href="page-register.html">Register Now!</a></p>
+                <p class="margin medium-small"><a href="/accounts/register/">Register Now!</a></p>
               </div>
               <div class="input-field col s6 m6 l6">
-                  <p class="margin right-align medium-small"><a href="page-forgot-password.html">Forgot password ?</a></p>
+                  <p class="margin right-align medium-small"><a href="#">Forgot password ?</a></p>
               </div>
             </div>
         </div>
