--- a/core/accounts/templates/accounts/account_index.html
+++ b/core/accounts/templates/accounts/account_index.html
@@ -1,9 +1,9 @@
-{% extends 'posts/layout.html' %}
+{% extends 'accounts/account_layout.html' %}
 {% block tag_contents1 %}
     {% for tag in tag_list %}
         {% if forloop.counter <= half_tag_count %}
             <li>
-              <a class="blue-text" href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+                <a class="blue-text" href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
             </li>
         {% endif %}
     {% empty %}
@@ -15,7 +15,7 @@
     {% for tag in tag_list %}
         {% if forloop.counter > half_tag_count %}
             <li>
-              <a class="blue-text" href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+                <a class="blue-text" href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
             </li>
         {% endif %}
     {% empty %}
@@ -25,28 +25,118 @@
 
 
 {% block content %}
-    <!-- Blog Entries Column -->
-    <div class="col-md-8">
-        <h1 class="my-4">This is my personal blog</h1>
-        {% for post in post_list %}
+    <div id="profile-page-wall-share" class="row">
+        <div class="col s12">
+            <ul class="tabs tab-profile z-depth-1 light-blue" style="width: 100%;">
+                <li class="tab col s9" style="width: 100%;"><a class="white-text waves-effect waves-light active"
+                                                               href="#UpdateStatus"><i class="mdi-editor-border-color"></i>
+                    Update Status</a>
 
-             <!-- Blog Post -->
-            <div class="card mb-4">
-                <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap">
-                <div class="card-body">
-                    <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text">{{ post.description }}</p>
-                    <a href="/posts/{{ post.id }}/" class="btn waves-effect waves-light">Read More &rarr;</a>
-                </div>
-                <div class="card-footer text-muted">
-                    Posted on {{ post.created_at }} by
-                    <a href="https://www.linkedin.com/in/peyman-zeynali-017b055a/">Peyman</a>
-                </div>
+                </li>
+                <div class="indicator" style="right: -1px; left: 354px;"></div>
+            </ul>
+            <div id="UpdateStatus" class="tab-content col s12  grey lighten-4" style="display: block;">
+                <form action="#" >
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <img src={{ avatar_url }} alt="" class="circle responsive-img valign profile-image-post">
+                        </div>
+                        <div class="input-field col-sm-10">
+                            <textarea id="textarea" row="2" class="materialize-textarea"></textarea>
+                            <label for="textarea" class="">What's on your mind?</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6 share-icons">
+                            <a href="#"><i class="mdi-image-camera-alt"></i></a>
+                            <a href="#"><i class="mdi-action-account-circle"></i></a>
+                            <a href="#"><i class="mdi-hardware-keyboard-alt"></i></a>
+                            <a href="#"><i class="mdi-communication-location-on"></i></a>
+                        </div>
+                        <div class="col s12 m6 right-align">
+                            <!-- Dropdown Trigger -->
+                            <a class="dropdown-button btn" href="#" data-activates="profliePost"><i
+                                    class="mdi-action-language"></i> Public</a>
+                            <ul class="dropdown-content">
+                                <li><a href="#!"><i class="mdi-action-language"></i> Public</a></li>
+                                <li><a href="#!"><i class="mdi-action-face-unlock"></i> Friends</a></li>
+                                <li><a href="#!"><i class="mdi-action-lock-outline"></i> Only Me</a></li>
+                            </ul>
+
+                            <!-- Dropdown Structure -->
+
+
+                            <button class="waves-effect waves-light btn"><i class="mdi-maps-rate-review left"></i>Post</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        {% empty %}
-            <div class="card mb-4">
-                <h2>Sorry, no posts yet</h2>
+        </div>
+    </div>
+
+    <!-- Blog Entries Column -->
+    <div id="profile-page-wall-posts" class="card">
+        <div class="col-sm-12">
+            <div id="profile-page-wall-post" class="card">
+                {% for post in post_list %}
+
+                    <div class="card-profile-title">
+                        <div class="row">
+                            <div class="col-sm-1">
+                                <img src={{ avatar_url }} alt="" class="circle responsive-img valign profile-post-uer-image">
+                            </div>
+                            <div class="col-sm-10">
+                                <p class="grey-text text-darken-4 margin">{{ post.author }}</p>
+                                <span class="grey-text text-darken-1 ultra-small">Shared {{ post.privacy }}ly -  {{ post.created_at }}</span>
+                            </div>
+                            <div class="col-sm-1 right-align">
+                                <i class="mdi-navigation-expand-more"></i>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <p>{{ post.description }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-image profile-medium">
+                        <img src={{ post.image.url }} alt="sample" class="responsive-img profile-post-image profile-medium">
+                        <span class="card-title">{{ post.title }}</span>
+                    </div>
+                    <div class="card-content">
+                        <p>{{ post.text }}</p>
+                    </div>
+                    <div class="card-action row">
+                        <div class="col-sm-4 card-action-share">
+                            <i class="fa fa-tags"></i>
+                            Tags:
+                            {% for tag in post.tags.all %}
+                                 <div class="chip">
+                                    <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
+                                 </div>
+                            {% empty %}
+                                <h2>Sorry, no tags yet</h2>
+                            {% endfor %}
+                        </div>
+                        <div class="input-field col s8 margin">
+                            <form action="#" >{% csrf_token %}
+                                <label for="profile-comments" class="">Comments</label>
+                                <textarea class="materialize-textarea" id="profile-comments" placeholder="Your Message" required></textarea>
+                                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                                    <i class="mdi-content-send right"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+
+                {% empty %}
+
+                        <p>Sorry, no posts yet</p>
+                {% endfor %}
             </div>
-        {% endfor %}
+        </div>
     </div>
 {% endblock %}
+
+
