--- a/core/accounts/templates/accounts/login.html
+++ b/core/accounts/templates/accounts/login.html
@@ -3,7 +3,8 @@
 
     <div class="container login-container white z-depth-2">
 
-      <form class="col s12" action="/accounts/login/" method="POST">{% csrf_token %}
+      <form class="col s12" action="/accounts/login/" method="POST">
+          {% csrf_token %}
         <div class="form-container">
             <div class="row">
               <div class="input-field col s12 center">
