--- a/core/posts/templates/posts/index.html
+++ b/core/posts/templates/posts/index.html
@@ -1,4 +1,19 @@
 {% extends 'posts/layout.html' %}
+{% block header %}
+    {% if user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="/accounts/logout/">Logout</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="/accounts/login/">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/accounts/register/">Register</a>
+        </li>
+    {% endif %}
+{% endblock %}
+
 {% block tag_contents1 %}
     {% for tag in tag_list %}
         {% if forloop.counter <= half_tag_count %}
