--- a/core/posts/templates/posts/layout.html
+++ b/core/posts/templates/posts/layout.html
@@ -32,12 +32,10 @@
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/accounts/login/">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/accounts/register/">Register</a>
-            </li>
+              {% block header %}
+
+              {% endblock %}
+
           </ul>
         </div>
       </div>
