--- a/core/accounts/templates/accounts/account_index.html
+++ b/core/accounts/templates/accounts/account_index.html
@@ -29,6 +29,7 @@
 
 
 {% block content %}
+
     <div id="profile-page-wall-share" class="row">
         <div class="col s12">
             <ul class="tabs tab-profile z-depth-1 light-blue" style="width: 100%;">
@@ -40,7 +41,7 @@
                 <div class="indicator" style="right: -1px; left: 354px;"></div>
             </ul>
             <div id="UpdateStatus" class="tab-content col s12  grey lighten-4" style="display: block;">
-                <form action="#" >
+                <form action="/accounts/index/" method="post" >
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-sm-2">
@@ -51,8 +52,8 @@
                             <label for={{ form.title.id_for_label }} >Subject</label>
                         </div>
                         <div class="input-field col-sm-10">
-                            {{ form.intro }}
-                            <label for={{ form.intro.id_for_label }} >An introduction sentence for your text...</label>
+                            {{ form.description }}
+                            <label for={{ form.description.id_for_label }} >An introduction sentence for your text...</label>
                         </div>
                         <div class="input-field col-sm-10">
                             {{ form.text }}
@@ -77,16 +78,16 @@
                                     {% endif %}
                                 {% endfor %}
                                 </select>-->
-
-                                <a name="privacy" class="dropdown-toggle waves-effect waves-light btn" data-toggle="dropdown" href="#"><i class="fa fa-lock"></i> Private</a>
+                                {{ form.privacy }}
+                                <!--<a name="privacy" class="dropdown-toggle waves-effect waves-light btn" data-toggle="dropdown" href="#"><i class="fa fa-lock"></i> Private</a>
 
                                 <ul class="dropdown-menu" role="menu">
                                     {% for choice in form.privacy.field.choices %}
                                         <li><a href="#!"><i class="fa fa-{{ choice.2 }}"></i> {{ choice.1}}</a></li>
                                     {% endfor %}
-                                </ul>
+                                </ul>-->
 
-                            <button class="waves-effect waves-light btn"><i class="fa fa-send left"></i>Post</button>
+                            <button class="waves-effect waves-light btn" type="submit"><i class="fa fa-send left"></i>Post</button>
                         </div>
                     </div>
                 </form>
@@ -146,15 +147,7 @@
                                     <i class="mdi-content-send right"></i>
                                 </button>
                             </form>
-                            <form action="#">{% csrf_token %}
-                                <div class="mdl-textfield mdl-js-textfield">
-                                    <textarea class="mdl-textfield__input" type="text" rows= "3" id="sample5" ></textarea>
-                                    <label class="mdl-textfield__label" for="sample5">Comments...</label>
-                                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                                        <span class="glyphicon glyphicon-send pull-right"></span>
-                                    </button>
-                                </div>
-                            </form>
+
                         </div>
                     </div>
 
@@ -165,6 +158,7 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
 
 
