--- a/core/posts/templates/posts/detail.html
+++ b/core/posts/templates/posts/detail.html
@@ -51,7 +51,7 @@
         <p class="lead">
             <i class="fa fa-user"></i>
         by
-            <a href="https://www.linkedin.com/in/peyman-zeynali-017b055a/">Peyman</a>
+            {{ post.author }}
         </p>
 
         <hr>
