--- a/core/posts/templates/posts/index.html
+++ b/core/posts/templates/posts/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="card-footer text-muted">
                     Posted on {{ post.created_at }} by
-                    <a href="https://www.linkedin.com/in/peyman-zeynali-017b055a/">Peyman</a>
+                    {{ post.author }}
                 </div>
             </div>
         {% empty %}
