--- a/core/accounts/templates/accounts/account_index.html
+++ b/core/accounts/templates/accounts/account_index.html
@@ -6,7 +6,7 @@
         {% if forloop.counter <= half_tag_count %}
             <li>
                 <div class="chip">
-                    <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+                    <a href="/accounts/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
                 </div>
             </li>
         {% endif %}
@@ -20,7 +20,7 @@
         {% if forloop.counter > half_tag_count %}
             <li>
                 <div class="chip">
-                    <a href="/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
+                    <a href="/accounts/tags/{{ tag.id }}/posts/">{{ tag.name }}</a>
                 </div>
             </li>
         {% endif %}
@@ -69,16 +69,7 @@
                         </div>
                         <div class="col s12 m6 right-align">
                             <!-- Dropdown Trigger -->
-                               <!-- <select name="privacy" class="form-control">
-                                {% for choice in form.privacy.field.choices %}
-                                    {% if forloop.counter == 1 %}
-                                        <option value="{{forloop.counter}}" selected>{{ choice.1}}</option>
-                                    {% else %}
-                                        <option value="{{forloop.counter}}">{{ choice.1}}</option>
-                                    {% endif %}
-                                {% endfor %}
-                                </select>-->
-                                {{ form.privacy }}
+
                                 <div class="file-field input-field">
                                     <div class="btn">
                                         <span for="{{ form.image.id_for_label }}"><i class="fa fa-cloud-upload"></i> {{ form.image.label }}</span>
@@ -88,14 +79,14 @@
                                         <input class="file-path validate" type="text">
                                     </div>
                                 </div>
-
-                                <!--<a name="privacy" class="dropdown-toggle waves-effect waves-light btn" data-toggle="dropdown" href="#"><i class="fa fa-lock"></i> Private</a>
+                                 <input type="hidden" name="privacy" value="private">
+                                <a name="privacy" class="dropdown-toggle waves-effect waves-light btn" data-toggle="dropdown" href="#"><i class="fa fa-lock"></i> Private</a>
 
                                 <ul class="dropdown-menu" role="menu">
                                     {% for choice in form.privacy.field.choices %}
-                                        <li><a href="#!"><i class="fa fa-{{ choice.2 }}"></i> {{ choice.1}}</a></li>
+                                        <li><a href="#!"><i class="fa fa-{{ choice.1 }}"></i> {{ choice.0}}</a></li>
                                     {% endfor %}
-                                </ul>-->
+                                </ul>
 
                             <button class="waves-effect waves-light btn" type="submit"><i class="fa fa-send left"></i>Post</button>
                         </div>
@@ -143,7 +134,7 @@
                             Tags:
                             {% for tag in post.tags.all %}
                                  <div class="chip">
-                                    <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
+                                    <a href="/accounts/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
                                  </div>
                             {% empty %}
                                 <h2>Sorry, no tags yet</h2>
