--- a/core/posts/templates/posts/index.html
+++ b/core/posts/templates/posts/index.html
@@ -4,6 +4,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/accounts/logout/">Logout</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/accounts/index/">Page</a>
+        </li>
     {% else %}
         <li class="nav-item">
             <a class="nav-link" href="/accounts/login/">Login</a>
