--- a/core/accounts/templates/accounts/account_layout.html
+++ b/core/accounts/templates/accounts/account_layout.html
@@ -26,19 +26,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/accounts/index/">Page<span class="sr-only">(current)</span></a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home
-                            <span class="sr-only">(current)</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/accounts/update/">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/accounts/logout/">Logout</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/accounts/index/">Page</a>
                     </li>
                 </ul>
             </div>
