--- a/core/accounts/templates/accounts/form_layout.html
+++ b/core/accounts/templates/accounts/form_layout.html
@@ -32,17 +32,14 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/accounts/login/">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/accounts/register/">Register</a>
-                </li>
+                {% block header %}{% endblock %}
               </ul>
             </div>
           </div>
         </nav>
-        {% block content %}{% endblock %}
+        <div class="container login-container white z-depth-2">
+            {% block content %}{% endblock %}
+        </div>
          <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
@@ -53,5 +50,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+        <script src="{% static "js/script.js" %}"></script>
     </body>
 </html>
