--- a/core/accounts/templates/accounts/account_index.html
+++ b/core/accounts/templates/accounts/account_index.html
@@ -178,21 +178,38 @@
 
         </div>
     </div>
-    <div class="pagination">
-        <span class="step-links">
+    <ul class="pagination">
+
             {% if post_list.has_previous %}
-                <a href="?page={{ post_list.previous_page_number }}">previous</a>
+                <li class="waves-effect">
+                    <a href="?page={{ post_list.previous_page_number }}"><i class="fa fa-chevron-left"></i></a>
+                </li>
+            {% else %}
+                <li class="waves-effect">
+                    <a><i class="fa fa-chevron-left"></i></a>
+                </li>
             {% endif %}
 
-            <span class="current">
-                Page {{ post_list.number }} of {{ post_list.paginator.num_pages }}.
-            </span>
+
+            {% for num in num_of_pages %}
+                {% if num == post_list.number %}
+                    <li class="active"><a>{{ num }}</a></li>
+                {% else %}
+                    <li class="waves-effect"><a href="?page={{ num }}">{{ num  }}</a></li>
+                {% endif %}
+            {% endfor %}
 
             {% if post_list.has_next %}
-                <a href="?page={{ post_list.next_page_number }}">next</a>
+                <li class="waves-effect">
+                    <a href="?page={{ post_list.next_page_number }}"><i class="fa fa-chevron-right"></i></a>
+                </li>
+            {% else %}
+                <li class="waves-effect">
+                    <a><i class="fa fa-chevron-right"></i></a>
+                </li>
             {% endif %}
-        </span>
-    </div>
+
+    </ul>
 {% endblock %}
 
 
