--- a/core/accounts/templates/accounts/account_tag_posts.html
+++ b/core/accounts/templates/accounts/account_tag_posts.html
@@ -89,5 +89,36 @@
             </div>
         </div>
     </div>
+    <ul class="pagination">
 
+        {% if post_list.has_previous %}
+            <li class="waves-effect">
+                <a href="?page={{ post_list.previous_page_number }}"><i class="fa fa-chevron-left"></i></a>
+            </li>
+        {% else %}
+            <li class="waves-effect">
+                <a><i class="fa fa-chevron-left"></i></a>
+            </li>
+        {% endif %}
+
+
+        {% for num in num_of_pages %}
+            {% if num == post_list.number %}
+                <li class="active"><a>{{ num }}</a></li>
+            {% else %}
+                <li class="waves-effect"><a href="?page={{ num }}">{{ num  }}</a></li>
+            {% endif %}
+        {% endfor %}
+
+        {% if post_list.has_next %}
+            <li class="waves-effect">
+                <a href="?page={{ post_list.next_page_number }}"><i class="fa fa-chevron-right"></i></a>
+            </li>
+        {% else %}
+            <li class="waves-effect">
+                <a><i class="fa fa-chevron-right"></i></a>
+            </li>
+        {% endif %}
+
+    </ul>
 {% endblock %}
