--- a/core/accounts/templates/accounts/login.html
+++ b/core/accounts/templates/accounts/login.html
@@ -1,7 +1,11 @@
 {% extends 'accounts/form_layout.html' %}
 {% block header %}
+    <li class="nav-item active">
+        <a class="nav-link" href="/">Home
+        </a>
+    </li>
     <li class="nav-item">
-      <a class="nav-link" href="/accounts/login/">Login</a>
+      <a class="nav-link active" href="/accounts/login/">Login<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/accounts/register/">Register</a>
