--- a/core/accounts/templates/accounts/register.html
+++ b/core/accounts/templates/accounts/register.html
@@ -1,10 +1,14 @@
 {% extends 'accounts/form_layout.html' %}
 {% block header %}
+    <li class="nav-item active">
+      <a class="nav-link" href="/">Home
+      </a>
+    </li>
     <li class="nav-item">
       <a class="nav-link" href="/accounts/login/">Login</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/accounts/register/">Register</a>
+    <li class="nav-item active">
+      <a class="nav-link" href="/accounts/register/">Register<span class="sr-only">(current)</span></a>
     </li>
 {% endblock %}
 {% block content %}
