--- a/core/posts/templates/posts/detail.html
+++ b/core/posts/templates/posts/detail.html
@@ -2,12 +2,22 @@
 {% block header %}
     {% if user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="/accounts/logout/">Logout</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link" href="/accounts/index/">Page</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/accounts/update/">Profile</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/accounts/logout/">Logout</a>
+        </li>
     {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="/accounts/login/">Login</a>
         </li>
