public user posts show on public site

--- a/core/posts/templates/posts/layout.html
+++ b/core/posts/templates/posts/layout.html
@@ -39,7 +39,7 @@
         <!-- Sidebar Widgets Column -->
         <div class="col-md-4">
 
-          <!-- Search Widget -->
+          <!-- Search Widget
             <div class="card white">
                 <div class="card-content black-text"><span class="card-title">Search</span>
                     <div class="card-action">
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
 
           <!-- Categories Widget -->
