--- a/core/accounts/templates/accounts/account_index.html
+++ b/core/accounts/templates/accounts/account_index.html
@@ -162,10 +162,10 @@
                                 <span class="card-title">Commented by {{ comment.author }} - <i class="fa fa-calendar"></i>{{ comment.created_at }} </span>
                                 {{ comment.text }}
                             </div>
-                            <div class="card-action">
+                            <!--<div class="card-action">
                                 <a href="#">This is a link</a>
                                 <a href="#">This is a link</a>
-                            </div>
+                            </div>-->
                         </div>
                         {% endfor %}
                     </div>
